# essentia_commerce_plugin

./: Cargo.toml
src/: flexforge.rs  lib.rs
src/errors/: mod.rs
src/impl/: cart_system.rs  inventory_sync.rs  mod.rs  order_management.rs  product_catalog.rs
src/impl/inventory_sync/: service.rs
src/impl/order_management/: mod.rs
src/impl/order_management/errors/: mod.rs
src/impl/order_management/implementations/: order_impl.rs  service_impl.rs
src/impl/order_management/types/: basic_types.rs  main_order_types.rs  mod.rs  order_types.rs
src/impl/product_catalog/: tests.rs
src/implementation/: cart_system.rs  mod.rs
src/implementation/cart_system/: cart.rs  item.rs  mod.rs  service.rs  shipping.rs  types.rs
src/implementation/inventory_sync/: mod.rs  service.rs  tests.rs
src/implementation/order_management/: mod.rs
src/implementation/order_management/implementations/: mod.rs  order_impl.rs  service_impl.rs
src/implementation/order_management/types/: basic_types.rs  main_order_types.rs  mod.rs  order_types.rs  service_types.rs
src/implementation/product_catalog/: mod.rs  service.rs  tests.rs
src/marketplace/: delivery.rs  escrow.rs  mod.rs  orders.rs  reviews.rs  search.rs  service.rs  sync.rs  tests.rs
src/traits/: mod.rs
src/types/: inventory_sync.rs  mod.rs  product_catalog.rs
